--- a/tests/pointerManager/index.html
+++ b/tests/pointerManager/index.html
@@ -24,7 +24,7 @@
             /* IE 10+ */
             /* -ms-user-select: none; */
             /* -o-user-select: none; */
-            /* user-select: none; */ */
+            /* user-select: none; */
         }
 
         #targetsDiv {
